--- a/index.html
+++ b/index.html
@@ -6,15 +6,20 @@ layout: home
 ---
 <section>
     <div>
-        <p>Witam na mojej stronie! Nazywam się Gosia Radzymińska i jestem absolwentką kierunku fizjoterapia oraz
-            wychowanie fizyczne na Akademii Wychowania Fizycznego w Krakowie.</p>
+        <h2>Witam na mojej stronie!</h2>
+
+        <p> Nazywam się Gosia Radzymińska. </p>
+
+        <p> Jestem fizjoterapeutką i ukończyłam studia licencjackie na kierunku wychowanie fizyczne na krakowskiej Akademii Wychowania Fizycznego.</p>
 
         <img src="./images/main.jpg" width="50%" height="50%">
 
-        <p>Specjalizuję się w pracy z kobietami, przygotowując je do porodu oraz wspierając je w okresie połogu i
-            dalszym macierzyństwie. Jako terapeutka uroginekologiczna, koncentruję się na pomocy w przypadkach takich
+        <p>Specjalizuję się w pracy z kobietami, przygotowując je do porodu oraz wspierając w okresie połogu i
+            dalszym macierzyństwie. </p>
+
+        <p>Jako terapeutka uroginekologiczna, koncentruję się na pomocy w przypadkach takich
             jak nietrzymanie moczu, bolesne miesiączkowanie, dysfunkcje seksualne oraz problemy pojawiające się po
-            porodzie (między innymi rozejście mięśnia prostego brzucha oraz powrót do formy sprzed ciąży).</p>
+            porodzie (między innymi rozejście mięśnia prostego). Wspieram kobiety w powrocie do formy sprzed ciąży.</p>
 
         <p>Moją pasją jest uświadamianie o znaczeniu aktywnego stylu życia. Jestem pasjonatką sportów zimowych oraz
             jazdy konnej. Jako żona i mama dwójki małych rozrabiaków wiem jak wymagająca bywa codzienność więc zawsze do
@@ -22,7 +27,7 @@ layout: home
             kinesiotapingu oraz kinezyterapii staram się zapewnić najlepszą możliwą opiekę oraz wsparcie moim pacjentkom
             i pacjentom.</p>
 
-        <p>Zapraszam do kontaktu i współpracy!</p>
+        <h3>Zapraszam do kontaktu i współpracy!</h3>
 
     </div>
 </section>
