fixes on main page

--- a/index.html
+++ b/index.html
@@ -19,13 +19,11 @@ layout: home
 
         <p>Jako terapeutka uroginekologiczna, koncentruję się na pomocy w przypadkach takich
             jak nietrzymanie moczu, bolesne miesiączkowanie, dysfunkcje seksualne oraz problemy pojawiające się po
-            porodzie (między innymi rozejście mięśnia prostego). Wspieram kobiety w powrocie do formy sprzed ciąży.</p>
+            porodzie. Wspieram kobiety w powrocie do formy sprzed ciąży.</p>
 
-        <p>Moją pasją jest uświadamianie o znaczeniu aktywnego stylu życia. Jestem pasjonatką sportów zimowych oraz
+        <p>Moją misją jest uświadamianie o znaczeniu aktywnego stylu życia. Jestem pasjonatką sportów zimowych oraz
             jazdy konnej. Jako żona i mama dwójki małych rozrabiaków wiem jak wymagająca bywa codzienność więc zawsze do
-            każdego pacjenta podchodzę indywidualnie. Wykorzystując techniki pracy manualnej, masażu tkanek głębokich,
-            kinesiotapingu oraz kinezyterapii staram się zapewnić najlepszą możliwą opiekę oraz wsparcie moim pacjentkom
-            i pacjentom.</p>
+            każdego pacjenta i każdej pacjentki podchodzę indywidualnie.</p>
 
         <h3>Zapraszam do kontaktu i współpracy!</h3>
 
