added opinie pacjentek

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ layout: home
 
         <p> Nazywam się Gosia Radzymińska. </p>
 
-        <p> Jestem fizjoterapeutką i ukończyłam studia licencjackie na kierunku wychowanie fizyczne na krakowskiej Akademii Wychowania Fizycznego.</p>
+        <p> Jestem fizjoterapeutką i ukończyłam studia licencjackie na kierunku wychowanie fizyczne na krakowskiej
+            Akademii Wychowania Fizycznego.</p>
 
         <img src="./images/main.jpg" width="50%" height="50%">
 
@@ -26,6 +27,33 @@ layout: home
             każdego pacjenta i każdej pacjentki podchodzę indywidualnie.</p>
 
         <h3>Zapraszam do kontaktu i współpracy!</h3>
+
+        <section>
+            <div>
+                <h2>Opinie Pacjentek</h2>
+                <div class="feedback">
+                    <blockquote>
+                        <p>Z Gosia spotkałam się po raz pierwszy tuż po porodzie SN. Gosia zaopiekowała się troskliwie o
+                            mnie jak i o maluszka udzielając cennych rad w podstawowych czynnościach jak podnosznie
+                            malucha, pozycje przy karmieniu, noszeniu tak aby zadbać o swój kręgosłup oraz
+                            bezpieczeństwo dziecka. Ponadto masaże zrobione przez Gosię przyniosły mi odprężenie oraz
+                            ogromną ulgę w bolących miejscach. Zadbała o każdy szczegół, np. świece, muzyka. Spotkania z
+                            Gosia to regeneracja fizyczna oraz mentalna. Techniki masażu dostosowywane są do
+                            indywidualnych potrzeb ciała na bieżąco. Gosia jest troskliwą, empatyczną i ciepłą osobą.
+                            Bardzo polecam!</p>
+                        <cite>Iwona</cite>
+                    </blockquote>
+                </div>
+                <div class="feedback">
+                    <blockquote>
+                        <p>Byłam pacjentką Gosi przez rok. Poznałyśmy się trzy tygodnie po porodzie. Gosia pomogła mi
+                            fizycznie i psychicznie bo oswoiła mnie z blizną po cięciu cesarskim. Wiem, że mogę na nią
+                            liczyć w razie potrzeby.</p>
+                        <cite>Monika</cite>
+                    </blockquote>
+                </div>
+            </div>
+        </section>
 
     </div>
 </section>
