--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ layout: home
                             malucha, pozycje przy karmieniu, noszeniu tak aby zadbać o swój kręgosłup oraz
                             bezpieczeństwo dziecka. Ponadto masaże zrobione przez Gosię przyniosły mi odprężenie oraz
                             ogromną ulgę w bolących miejscach. Zadbała o każdy szczegół, np. świece, muzyka. Spotkania z
-                            Gosia to regeneracja fizyczna oraz mentalna. Techniki masażu dostosowywane są do
+                            Gosią to regeneracja fizyczna oraz mentalna. Techniki masażu dostosowywane są do
                             indywidualnych potrzeb ciała na bieżąco. Gosia jest troskliwą, empatyczną i ciepłą osobą.
                             Bardzo polecam!</p>
                         <cite>Iwona</cite>
