--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ layout: home
                 <h2>Opinie Pacjentek</h2>
                 <div class="feedback">
                     <blockquote>
-                        <p>Z Gosią spotkałam się po raz pierwszy tuż po porodzie SN. Gosia zaopiekowała się troskliwie o
-                            mnie jak i o maluszka udzielając cennych rad w podstawowych czynnościach jak podnosznie
+                        <p>Z Gosią spotkałam się po raz pierwszy tuż po porodzie SN. Gosia zaopiekowała się troskliwie
+                            mną jak i maluszkiem udzielając cennych rad w podstawowych czynnościach jak podnosznie
                             malucha, pozycje przy karmieniu, noszeniu tak aby zadbać o swój kręgosłup oraz
                             bezpieczeństwo dziecka. Ponadto masaże zrobione przez Gosię przyniosły mi odprężenie oraz
                             ogromną ulgę w bolących miejscach. Zadbała o każdy szczegół, np. świece, muzyka. Spotkania z
