--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ layout: home
 
         <section>
             <div>
-                <h2>Opinie Pacjentek</h2>
+                <h2>Opinie</h2>
                 <div class="feedback">
                     <blockquote>
                         <p>Z Gosią spotkałam się po raz pierwszy tuż po porodzie SN. Gosia zaopiekowała się troskliwie
@@ -54,8 +54,10 @@ layout: home
                 </div>
                 <div class="feedback">
                     <blockquote>
-                        <p>Gosię polecam z czystym sumieniem! Jej masaże są ulgą dla mojego kręgosłupa i karku. Pomaga mi także ogarnąć moja bliznę po cc. Szybko postawiła mnie na nogi po skręceniu kostki.
-                            Spotkania z nią to nie tylko masaż ale i odprężenie. Służy zawsze radą ale też potrafi wysłuchać.
+                        <p>Gosię polecam z czystym sumieniem! Jej masaże są ulgą dla mojego kręgosłupa i karku. Pomaga
+                            mi także ogarnąć moja bliznę po cc. Szybko postawiła mnie na nogi po skręceniu kostki.
+                            Spotkania z nią to nie tylko masaż ale i odprężenie. Służy zawsze radą ale też potrafi
+                            wysłuchać.
                             To kobieta z sercem na dłoni i magiczną mocą w rękach ❤️.</p>
                         <cite>Ania</cite>
                     </blockquote>
@@ -63,5 +65,7 @@ layout: home
             </div>
         </section>
 
+        <p>Jeżeli pragniesz podzielić się swoją opinią na temat mojej pracy, zachęcam do przesłania wiadomości na adres
+            <a href="mailto:gosia.radzyminska@gmail.com">gosia.radzyminska@gmail.com</a>.</p>
     </div>
 </section>
