--- a/index.html
+++ b/index.html
@@ -4,28 +4,40 @@
 
 layout: home
 ---
+
 <section>
-    <div>
-        <h2>Witam na mojej stronie!</h2>
+  <div>
+    <h2>Witam na mojej stronie!</h2>
 
-        <p> Nazywam się Gosia Radzymińska. </p>
+    <p>Nazywam się Gosia Radzymińska.</p>
 
-        <p> Jestem fizjoterapeutką i ukończyłam studia licencjackie na kierunku wychowanie fizyczne na krakowskiej
-            Akademii Wychowania Fizycznego.</p>
+    <p>
+      Jestem magistrem fizjoterapii i certyfikowaną fizjoterapeutką
+      uroginekologiczną. Ukończyłam także studia licencjackie na kierunku
+      wychowanie fizyczne na krakowskiej Akademii Wychowania Fizycznego.
+    </p>
 
-        <img src="./images/main.jpg" width="50%" height="50%">
+    <img src="./images/main.jpg" width="50%" height="50%" />
 
-        <p>Specjalizuję się w pracy z kobietami, przygotowując je do porodu oraz wspierając w okresie połogu i
-            dalszym macierzyństwie. </p>
+    <p>
+      Specjalizuję się w pracy z kobietami, przygotowując je do porodu oraz
+      wspierając w okresie połogu i dalszym macierzyństwie.
+    </p>
 
-        <p>Jako terapeutka uroginekologiczna, koncentruję się na pomocy w przypadkach takich
-            jak nietrzymanie moczu, bolesne miesiączkowanie, dysfunkcje seksualne oraz problemy pojawiające się po
-            porodzie. Wspieram kobiety w powrocie do formy sprzed ciąży.</p>
+    <p>
+      Jako terapeutka uroginekologiczna, koncentruję się na pomocy w przypadkach
+      takich jak nietrzymanie moczu, bolesne miesiączkowanie, dysfunkcje
+      seksualne oraz problemy pojawiające się po porodzie. Wspieram kobiety w
+      powrocie do formy sprzed ciąży.
+    </p>
 
-        <p>Moją misją jest uświadamianie o znaczeniu aktywnego stylu życia. Jestem pasjonatką sportów zimowych oraz
-            jazdy konnej. Jako żona i mama dwójki małych rozrabiaków wiem jak wymagająca bywa codzienność więc zawsze do
-            każdego pacjenta i każdej pacjentki podchodzę indywidualnie.</p>
+    <p>
+      Moją misją jest uświadamianie o znaczeniu aktywnego stylu życia. Jestem
+      pasjonatką sportów zimowych oraz jazdy konnej. Jako żona i mama dwójki
+      małych rozrabiaków wiem jak wymagająca bywa codzienność więc zawsze do
+      każdego pacjenta i każdej pacjentki podchodzę indywidualnie.
+    </p>
 
-        <h3>Zapraszam do kontaktu i współpracy!</h3>
-    </div>
+    <h3>Zapraszam do kontaktu i współpracy!</h3>
+  </div>
 </section>
