--- a/index.html
+++ b/index.html
@@ -12,32 +12,46 @@ layout: home
     <p>Nazywam się Gosia Radzymińska.</p>
 
     <p>
-      Jestem magistrem fizjoterapii i certyfikowaną fizjoterapeutką
-      uroginekologiczną. Ukończyłam także studia licencjackie na kierunku
+      Jestem magistrem fizjoterapii oraz certyfikowaną fizjoterapeutką
+      uroginekologiczną. Ukończyłam również studia licencjackie na kierunku
       wychowanie fizyczne na krakowskiej Akademii Wychowania Fizycznego.
     </p>
 
+    <p>
+      <strong
+        >Specjalizuję się w holistycznej pracy z kobietami na różnych etapach
+        macierzyństwa - od przygotowania do porodu, przez wsparcie w okresie
+        połogu, aż po pomoc w powrocie do pełni formy. Jako terapeutka
+        uroginekologiczna zajmuję się problemami takimi jak nietrzymanie moczu,
+        bolesne miesiączkowanie, dysfunkcje seksualne oraz obniżenia narządu
+        rodnego. Pomagam kobietom odzyskać komfort życia i pewność
+        siebie.</strong
+      >
+    </p>
+
+    <p>
+      Pracuję również z mężczyznami, oferując terapię urologiczną w przypadkach
+      takich jak zespoły bólowe miednicy mniejszej, nietrzymanie moczu, stan po
+      radykalnej prostatektomii oraz zaburzenia erekcji.
+    </p>
+
+    <p>
+      <strong
+        >Moja misja to edukacja i uświadamianie o kluczowej roli zdrowego,
+        aktywnego stylu życia w zachowaniu dobrej kondycji fizycznej i
+        psychicznej.</strong
+      >
+      Prywatnie jestem pasjonatką sportów zimowych oraz jazdy konnej. Jako żona
+      i mama dwójki energicznych maluchów doskonale rozumiem wyzwania
+      codzienności, dlatego zawsze podchodzę do każdego pacjenta i pacjentki z
+      empatią, cierpliwością i pełnym zaangażowaniem.
+    </p>
+
+    <p>
+      Zapraszam do kontaktu - razem możemy zadbać o Twoje zdrowie, komfort i
+      lepsze samopoczucie!
+    </p>
+
     <img src="./images/main.jpg" width="50%" height="50%" />
-
-    <p>
-      Specjalizuję się w pracy z kobietami, przygotowując je do porodu oraz
-      wspierając w okresie połogu i dalszym macierzyństwie.
-    </p>
-
-    <p>
-      Jako terapeutka uroginekologiczna, koncentruję się na pomocy w przypadkach
-      takich jak nietrzymanie moczu, bolesne miesiączkowanie, dysfunkcje
-      seksualne oraz problemy pojawiające się po porodzie. Wspieram kobiety w
-      powrocie do formy sprzed ciąży.
-    </p>
-
-    <p>
-      Moją misją jest uświadamianie o znaczeniu aktywnego stylu życia. Jestem
-      pasjonatką sportów zimowych oraz jazdy konnej. Jako żona i mama dwójki
-      małych rozrabiaków wiem jak wymagająca bywa codzienność więc zawsze do
-      każdego pacjenta i każdej pacjentki podchodzę indywidualnie.
-    </p>
-
-    <h3>Zapraszam do kontaktu i współpracy!</h3>
   </div>
 </section>
